[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Menu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/Lato-Bold.ttf" type="FontFile" id=2]
[ext_resource path="res://Scenes/Menus/OptionsMenu.tscn" type="PackedScene" id=3]

[sub_resource type="FontFile" id=1]
size = 42
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=2]
size = 42
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
process_mode = 3
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.207843, 0.184314, 0.184314, 0.541176 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
offset_left = 490.0
offset_top = 219.0
offset_right = 790.0
offset_bottom = 501.0
theme_override_constants/separation = 20

[node name="PausedLabel" type="Label" parent="CenterContainer/VBoxContainer"]
offset_right = 300.0
offset_bottom = 51.0
theme_override_fonts/font = SubResource( 1 )
text = "Paused"
align = 1

[node name="ResumeBtn" type="Button" parent="CenterContainer/VBoxContainer"]
offset_top = 71.0
offset_right = 300.0
offset_bottom = 128.0
custom_minimum_size = Vector2( 300, 0 )
theme_override_fonts/font = SubResource( 2 )
text = "Resume Game"

[node name="OptionsBtn" type="Button" parent="CenterContainer/VBoxContainer"]
offset_top = 148.0
offset_right = 300.0
offset_bottom = 205.0
theme_override_fonts/font = SubResource( 2 )
text = "Options"

[node name="QuitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
offset_top = 225.0
offset_right = 300.0
offset_bottom = 282.0
theme_override_fonts/font = SubResource( 2 )
text = "Quit Game"

[node name="OptionsMenu" parent="." instance=ExtResource( 3 )]

[connection signal="pressed" from="CenterContainer/VBoxContainer/ResumeBtn" to="." method="_on_ResumeBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/OptionsBtn" to="." method="_on_OptionsBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
